# project_3

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
htmlcov/: index.html
src/project_3/: config.py  db_init.py  db_manager.py  main.py
src/project_3/api/: base.py  client.py
src/project_3/db/: base.py  db_init.py  db_manager.py
src/project_3/utils/: helpers.py
tests/: test_client.py  test_db_init.py  test_db_manager.py  test_helpers.py
