[tool.poetry]
name = "project_3"
version = "0.1.0"
description = ""
authors = ["ViktorShadr <v.viktor.shadrin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
requests = ">=2.32.5,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pylint = ">=3.3.8,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
alive-progress = ">=3.3.0,<4.0.0"
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
poetry-core = ">=2.0.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"

[tool.poetry.group.format.dependencies]
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
